# pugpe-site

./: .editorconfig  .env-example  .gitignore  .pre-commit-config.yaml  .prospector.yaml  Procfile  README.md  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml  dev_pipeline.yml  prod_pipeline.yml
common/: models.py
events/: models.py
events/migrations/: 0001_initial.py
events/tests/: test_model_event.py
meetings/: admin.py  event_helpers.py  models.py
meetings/migrations/: 0001_initial.py  0002_auto_20210129_1906.py
meetings/tests/: test_model_meeting.py  test_model_meeting_event.py
profiles/: models.py
profiles/migrations/: 0001_initial.py
profiles/tests/: test_model_profile.py
pugpe/: asgi.py  urls.py  wsgi.py
pugpe/settings/: base.py  develop.py  production.py  settings.py
users/: models.py
users/migrations/: 0001_initial.py
users/tests/: test_user_model.py
