[tool.poetry]
authors = ["Marcus Gabriel <marcusgabriel.ds@gmail.com>"]
description = "Site do PUGPE: Python User Group - Pernambuco"
name = "pugpe-site"
version = "0.1.0"

[tool.poetry.dependencies]
Django = "^3.1.5"
dj-database-url = "^0.5.0"
gunicorn = "^20.0.4"
python = "^3.9"
python-decouple = "^3.4"
whitenoise = "^5.2.0"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = "^20.8b1"
django-test-without-migrations = "^0.6"
prospector = "^1.3.1"

[tool.isort]
atomic = true
combine_star = true
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
known_django = "django"
line_length = 100
lines_after_imports = 2
multi_line_output = 3
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip = ["venv", "env", "migrations", ".env", ".venv"]
use_parentheses = true

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | _build
  | build
  | dist
  | [a-z_]+/migrations
)/
'''
line-length = 100
quiet = true
target-version = ['py36']

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
